--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
     </style>
   </head>
   <body>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4900519888166581"
+      crossorigin="anonymous"
+    ></script>
     <div class="container">
       <h1>Pomodoro Timer</h1>
 
@@ -323,9 +328,6 @@
         data-ad-slot="XXXXXXXXXX"
         data-ad-format="auto"
       ></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
     </div>
 
     <script>
@@ -509,10 +511,8 @@
         clearInterval(timerInterval);
         timerInterval = null;
       }
+
+      (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
   </body>
 </html>
-<!-- =======
-<h1>Hello, I'm Mahmoud Doma</h1>
-<p>Please visit my latest <a href="blog">Blog</a></p>
->>>>>>> a08422ebbe460b3e6d49fc4faec35960bb19f8d5 -->
